--- a/mluvnice/00-úvod.tex
+++ b/mluvnice/00-úvod.tex
@@ -53,7 +53,7 @@
 \begin{center}%
 {\Huge\bfseries PÁTÝ ROD\\}\medskip%
 Návrh podle: Singularis\\%
-Verze: 1.0 (říjen 2021)
+Verze: 1.1 (leden 2022)
 \end{center}%
 \bigskip%
 %
