--- a/mluvnice/01-podstatná-jména.tex
+++ b/mluvnice/01-podstatná-jména.tex
@@ -46,18 +46,19 @@ ve všech ostatních pádech a v čísle množném vynecháno;
 např. „našinex“, 2. pád může být „našinxe“ i „našinexe“,
 3. pád „našinxi“ i „našinexi“ atd.
 
-\emph{Pomůcka pro jednotné číslo:} Skloňovací koncovka je „-i“ ve všech
+\emph{Pomůcka 1 pro jednotné číslo:} 1. pád je základní tvar bez koncovky,
+2., 3. a 4. pád mají stejnou koncovku jako vzor \emph{růže},
+5., 6. a 7. mají stejnou koncovku jako vzor \emph{muž} (ovšem bez varianty
+-ovi).
+
+\emph{Pomůcka 2 pro jednotné číslo:} Skloňovací koncovka je „-i“ ve všech
 pádech, kde má tutéž koncovku vzor „růže“ (3., 4. a 6. pád);
 v ostatních případech (1., 2., 5. a 7. pád)
 se použije stejná koncovka jako u vzoru „muž“.
-%Nejjednodušší možnost,
-%jak se naučit skloňovací vzor „studenx“, je vyjít ze vzoru \textbf{muž}
-%a zapamatovat si odlišný čtvrtý pád „(pro) studenxu“
-%(vycházející ze vzorů předseda a žena) a potlačit zde chybějící tvar „mužovi“.
-%Složitější možností je vyjít ze vzoru \textbf{píseň},
-%kde si kromě odlišného čtvrtého pádu musíme zapamatovat i sedmý „(se) studenxem“
-%(vycházející jen ze vzoru muž).
+
+\emph{Pomůcka 3 pro jednotné číslo:} Můžeme vyjít z některého z podobných
+vzorů píseň, růže nebo muž a zapamatovat si jen odlišné koncovky
+v některých pádech.
 
 \emph{Pomůcka pro množné číslo:} V množném čísle se vzor studenx
-shoduje se vzorem „píseň“. (A také se vzorem růže, až na chybějící
-tvar podvzoru „ulic“.)
+shoduje se vzory „píseň“ a „růže“.
