--- a/mluvnice/07-závěr.tex
+++ b/mluvnice/07-závěr.tex
@@ -87,6 +87,14 @@ vespolných pravopisných tvarů názvů osob nebo naopak, např. takto:
 \item Názvy v rodě pátém je velmi nežádoucí dávat do vylučovacího poměru s názvy týchž skupin osob nebo jejich genderově vymezených podskupin v jiných rodech. Např. věta „Zítra nás navštíví student/studenx/studentka z Prahy“ o genderu dané osoby sděluje, že je muž/kdokoliv/žena, což dává chybný smysl. Opakované používání takového tvaru může vytvořit škodlivý stereotyp, že názvy osob v pátém rodě neoznačují ženy a muže. Je ovšem v pořádku použit názvy v jiných rodech k vysvětlení názvu v rodě pátém, např.: „Zítra nás navštíví studenx (student/ka/\ldots) z Prahy“ nebo naopak název v rodě pátém jako vysvětlení složeného tvaru, např.: „Zítra nás navštíví student/ka/\ldots{} (studenx) z Prahy.“ V případě opakovaného použití je vhodné tyto dva způsoby střídat, aby nevznikal dojem hierarchie mezi oběma formami vyjádření.
 \end{comment}
 
+\section{Výslovnost}
+%
+Písmeno „x“ se vyslovuje podle běžných pravidel české výslovnosti.
+Pro tvary pátého rodu to v praxi znamená, že „x“ vyslovíte vždy „ks“,
+s výjimkou případů, kdy je ve slabice, jejíž poslední souhláska je znělá
+(b, d, ď, g, h, j, l, m, n, ň, r, v, z, ž) jako ve slově „xdo“;
+v těchto případech se vysloví zněle „gz“, proto se „xdo“ čte „gzdo“.
+
 \section{Poznámky a detaily}
 \begin{itemize}
 \item\ifgmelse{Od slova „komik“ nelze název v pátém rodě utvořit, protože by byl v konfliktu
