--- a/mluvnice/00-úvod.tex
+++ b/mluvnice/00-úvod.tex
@@ -1,5 +1,5 @@
 % Pátý rod
-% Copyright (c) 2021 Singularis <singularis@volny.cz>
+% Copyright (c) 2021-2023 Singularis <singularis@volny.cz>
 %
 % Toto dílo je dílem svobodné kultury; můžete ho šířit a modifikovat pod
 % podmínkami licence Creative Commons Attribution-ShareAlike 4.0 International
@@ -53,43 +53,74 @@
 \begin{center}%
 {\Huge\bfseries PÁTÝ ROD\\}\medskip%
 Návrh podle: Singularis\\%
-Verze: 1.1 (leden 2022)
+Verze: 1.2 (červen 2023)
 \end{center}%
 \bigskip%
 %
 \section{Úvod (deklarace)}
 
-Pátý rod je umělé rozšíření (nadstavba) českého jazyka,
-jehož cílem je doplnit češtině prostředky pro pohlavně/genderově neutrální
-vyjadřování v hovoru i textu, které bude esteticky a funkčně srovnatelné
-s rodem ženským a rodem mužským životným.
-\ifgmelse{%
-    Pátý rod je vhodný zejména jako alternativa generického maskulina
-    (jež v mnoha kontextech není vnímáno pohlavně/genderově neutrálně
-    -- viz např. slovo „striptér“) a dosud používaných lomítkových tvarů
-    (např. „lingvista/ka“).}
+Pátý rod je umělecký projekt genderově neutrálního rozšíření českého jazyka.
+Jeho cílem je přinést funkčnější a jednoznačnější alternativu generického
+maskulina při maximálním zachování krásy, bohatství a funkčnosti jazyka
+ve všech jeho stylech a formách a uměle mu doplnit prostředky
+pro vyjadřování v hovoru i textu, které bude esteticky
+a funkčně srovnatelné s rodem ženským a rodem
+mužským životným, ale nebude muset nést žádnou informaci o pohlaví, genderu,
+věku, dospělosti či sebepojetí zúčastněných osob, ani výslovnou ani předpokládanou,
+ani pozitivní ani negativní.
 
-Pátý rod nabízí nové názvy osob (např. „studenx“, „mažorex“, „striptéřix“ či „prostitux“),
-které příponou „-x“ výslovně odmítají vyjádření pohlaví/genderu jmenovaných lidí
-skloňovanou příponou. Nejsou-li takové názvy doplněny jiným prostředkem
-vyjádření pohlaví/genderu, očekává se tím od adresátstva
-uvažování a zacházení abstrahující od pohlaví/genderu, jemuž rod pátý napomáhá
-poskytnutím takových tvarů dalších slovních druhů,
-které nejsou a nemají být stereotypně dávány do souvislosti
-s žádným konkrétním pohlavím/genderem (ani jeho případnou absencí).
+Pátý rod je nový negenderovaný rod užívaný k označování osob;
+touto vlastností doplňuje stávající mluvnické rody češtiny:
+dva široce užívané k označování osob, ale více či méně genderované
+(mužský životný a ženský) a dva sice negenderované, ale k označování osob
+převážně neužívané (mužský neživotný a střední).
 
-Pátý rod je vhodný zejmena tehdy, když pohlaví/gender není znám/o
-nebo je nejednoznačné/ý (jako v případě smíšené skupiny osob).
-Vyjadřuje, že se jedná o osoby, ale současně znamená, že jejich
-pohlaví/gender tím zatím není vyjádřen/o a nemá být domýšlen/o.
+Pátý rod nabízí především nové názvy osob (např. „studenx“, „mažorex“, „striptéřix“
+či „rodičkax“), které zakončením „-x“ (resp. „-ks“), jež je dosavadní češtině cizí,
+ale čitelné, a tedy je vhodným kandidátem k jejímu rozšíření, výslovně odmítají
+vyjádření pohlaví/genderu jmenovaných lidí či jiných osob skloňovanou příponou.
+Tyto názvy mohou být podle rozhodnutí mluvčí doplněny jiným prostředkem
+vyjádření pohlaví/genderu nebo ponechány bez jeho vyjádření,
+a vyžadovat tak uvažování o nazývaných osobách, jaké nebude nepatřičné
+pro osoby žádného pohlaví/genderu. Označení osoby v pátém rodě
+zejména není samo o sobě příznakem nebinárství, nedospělosti
+či genderové nekonformity a s ničím s toho nemá být pátý rod stereotypně
+spojován.
 
-Je-li rodem pátým označována fyzická osoba, mělu byste o ní uvažovat způsobem,
-který nebude pro osobu žádného pohlaví/genderu méně patřičný než pro osoby
-jiných pohlaví/genderů, a očekávat pod takovým označením lidskou
+Za účelem napomáhání genderově neutrálnímu chápání nových názvů osob
+poskytuje pátý rod rovněž nové tvary ostatních slovních druhů,
+pečlivě vybrané a vyvážené, aby nevyvolávaly konzistentní dojem
+určitého pohlaví/genderu. Toho se dosahuje nejčastěji hláskami,
+které jsou na daném místě slova zcela nové, byť v mezích českého hláskosloví
+(např. „hubeneu“), nebo takovými, které mísí či vyvažují žensky a mužsky znějící
+varianty (např. „hy“); k jednomu z genderovaných tvarů se pátý rod přiklání
+pouze u tvarů genderovaných velmi slabě, z nichž není odečítání pohlaví/genderu
+v současné češtině obvyklé (např. „jež“ či „jmenovavši“).
+
+Nové tvary pátého rodu samy o sobě nemají být dávány do souvislosti
+s žádným konkrétním pohlavím/genderem ani jeho absencí,
+nestaví se však do cesty vyjádřování či popírání pohlavnosti/genderovosti
+nazývaných osob či sebe jinými prostředky, než je rod,
+např. vyjmenováním v závorce. Pátý rod naopak takové novátorské vyjadřování
+pohlavnosti/genderovosti usnadňuje, protože odstraňuje tradiční
+zažitá genderová vodítka, která by se s ním dostávala do konfliktu.
+
+Názvy osob rodu pátého jsou vhodné především tehdy,
+když pohlaví/gender není znám/o nebo je nejednoznačné/ý
+(jako v případě smíšené skupiny osob), ale použitelné jsou ve všech kontextech,
+kde by byly použitelné stávající genderově specifické názvy,
+a mohou být používány k mnoha různým účelům odpovídajícím deklarovanému
+významu pátého rodu.
+
+Pakliže neznáte pohlaví/gender nazývané osoby, protože je označována
+či o sobě mluví v pátém rodě či jiným genderově neutrálním způsobem,
+mělu byste o ní uvažovat způsobem, který nebude nepatřičný
+pro osobu žádného pohlaví/genderu, a očekávat pod takovým označením lidskou
 (popř. humanoidní) bytost působící jakýmkoliv pohlavním/genderovým dojmem,
-přitažlivým i odpudivým, jasným i matoucím, konformním i extravagantním,
-vám vlastním i vám cizím,
-typickým i zřídkavým, i takovým, jaký jste dosud v životě nezažilu.
+přitažlivým i odpudivým,
+jasným i matoucím, konformním i extravagantním,
+vám vlastním i vám cizím, typickým i zřídkavým,
+i takovým, jaký jste dosud v životě nezažilu.
 
 \begin{comment}
 Co chci sdělit:
@@ -112,18 +143,26 @@ a chtějí ho co nejvíc předvádět ostatním.
 
 \subsection{Vztah s českou mluvnicí}
 
-Toto rozšíření nezavádí žádnou změnu existujících pravidel české mluvnice
-ani pravopisu, zavádí však nová slova (zejména podstatná jména a zájmena),
-nové slovotvorné postupy k jejich vytváření a nové tvary existujících slov.
+Pro použití pátého rodu není nutná žádná změna existujících pravidel
+české mluvnice ani pravopisu, pátý rod však zavádí nová slova (zejména podstatná jména
+a zájmena), nové slovotvorné postupy k jejich vytváření a nové tvary
+existujících slov.
 
-Tato nová slova a nové tvary se řídí především mluvnickými pravidly
-stanovenými tímto rozšířením. \emph{Ve všech případech, které zde nejsou upraveny,
+Tato nová slova a nové tvary se řídí především pravidly stanovenými tímto
+návrhem. Ve \emph{všech případech, které zde nejsou upraveny},
 se však řídí pravidly české mluvnice vyloženými tak, jako by
-nová slova a tvary byly tzv.} \textbf{náhradního rodu}\emph{,
-což je pro tvary čísla jednotného rod mužský životný
-a pro tvary čísla množného rod ženský.}
+nová slova a tvary byly:
+\begin{itemize}
+\item rodu mužského životného, jde-li o slova v čísle jednotném;
+\item rodu ženského, jde-li o slova v čísle množném.
+\end{itemize}
 
-\ifgmelse{}{Žádný mluvní postředek pátého rodu nevyžaduje použití
+Toto dodatečné pravidlo se v této verzi pátého rodu uplatňuje nejčastěji
+v případě přivlastňovacích zájmen můj, svůj apod.: „můj studenx“
+(jako by „studenx“ bylo rodu mužského životného),
+ale „moje studenxe“ (jako by „studenxe“ bylo rodu ženského).
+
+\ifgmelse{}{Žádný mluvní prostředek pátého rodu nevyžaduje použití
 generického maskulina.}
 
 \begin{comment}
@@ -136,3 +175,15 @@ a zacházet s ním tak, jen pokud splňuje všechny následující podmínky:
 \item a nemá jednoznačný rod podle české mluvnice (tzn. buď nemá stanoven žádný rod, jako např. anglická jména; nebo je vícerodé).
 \end{itemize}
 \end{comment}
+
+\subsection{Zakončení -x, resp. -ks}
+
+Zakončení podstatných jmen pátého rodu lze psát -x nebo -ks bez rozdílu
+významu, tzn. např. „studenx“ („bez studenxe“) a „studenks“ („bez studenkse“)
+jsou totéž slovo, jen jinak zapsané. Toto neplatí pro vlastní jména
+v pátém rodě, u nich je třeba dodržet konkrétní pravopisný zápis.
+
+Tvary zájmena pátého rodu „xdo“ a zájmen od něj odvozených lze psát
+s x nebo foneticky (gzdo, bez ksoho, ...).
+
+V tomto dokumentu jsou upřednostňovány tvary s písmenem x.
