--- a/mluvnice/01-podstatná-jména.tex
+++ b/mluvnice/01-podstatná-jména.tex
@@ -1,5 +1,5 @@
 % Pátý rod
-% Copyright (c) 2021 Singularis <singularis@volny.cz>
+% Copyright (c) 2021, 2023 Singularis <singularis@volny.cz>
 %
 % Toto dílo je dílem svobodné kultury; můžete ho šířit a modifikovat pod
 % podmínkami licence Creative Commons Attribution-ShareAlike 4.0 International
@@ -22,8 +22,9 @@ se takovým označením zvíře rozumí jedině tehdy, je-li osobou.
 je to častější.)
 
 Z podstatných jmen pátého rodu lze skloňovat pouze ta, která končí „-x“
-(ostatní zůstávají nesklonná); skloňují se podle vzoru \emph{studenx}:
+nebo „-ks“ (ostatní zůstávají nesklonná); skloňují se podle vzoru \emph{studenx}:
 
+%\clearpage%
 {
 %\hyphenpenalty=10000
 \begin{longtabu}spread1pt{|X[1,r]|X[1,r]|X[2,l]|X[2,l]|X[5,l]|}
