--- a/mluvnice/03-zájmena.tex
+++ b/mluvnice/03-zájmena.tex
@@ -1,5 +1,5 @@
 % Pátý rod
-% Copyright (c) 2021 Singularis <singularis@volny.cz>
+% Copyright (c) 2021, 2023 Singularis <singularis@volny.cz>
 %
 % Toto dílo je dílem svobodné kultury; můžete ho šířit a modifikovat pod
 % podmínkami licence Creative Commons Attribution-ShareAlike 4.0 International
@@ -123,8 +123,8 @@ shodné s rodem mužským neživotným a rodem ženským
 
 Vzhledem k záměru pohlavně/genderově neutrálního vyjadřování nabízí rod pátý
 jako synonymní alternativu k tázacímu zájmenu rodu mužského životného „kdo“
-nové tázací zájmeno \textbf{xdo} (v prvním pádě čtené „gzdo“).
-Současně s tím vzniká odpovídající vztažné zájmeno „xdo“,
+nové tázací zájmeno \textbf{xdo} (lze psát foneticky \textbf{gzdo}).
+Současně s tím vzniká odpovídající vztažné zájmeno xdo (gzdo),
 takže „xdo“ lze použít místo „kdo“ ve všech situacích (vztažné zájmeno
 však na rozdíl od tázacího nemá vlastní mluvnický rod,
 ale přenáší rod toho, k čemu se vztahuje).
@@ -133,7 +133,7 @@ ale přenáší rod toho, k čemu se vztahuje).
 \hyphenpenalty=10000
 \begin{longtabu}{|X[1,R]|X[1,L]|X[1,L]|X[12,L]|}
 \hline%
-\textbf{pád}&\textbf{xdo}&\textbf{výsl.}&\textbf{příklad}\\\hline\endhead%
+\textbf{pád}&\textbf{xdo}&\textbf{gzdo}&\textbf{příklad}\\\hline\endhead%
 1.  &xdo    &\emph{gzdo}    &Něxdo neznámau zaklepalu. Xdo to bylu? Nebylu to nixdo, to se mi jen zdálo.\\\hline%
 2.  &xoho   &\emph{ksoho}   &Projekt se neobejde bez něxoho zodpovědneu.\\\hline%
 3.  &xomu   &\emph{ksomu}   &Xomu oblíbeneu byste chtěle dát dárek? Něxomu zdejší?\\\hline%
@@ -143,9 +143,11 @@ ale přenáší rod toho, k čemu se vztahuje).
 \end{longtabu}
 }
 
-\noindent Od zájmena „xdo“ se pak předponou či příponou odvodí
-nová neurčitá zájmena: „něxdo“, „kdexdo“, „lecxdo“, „xdosi“,
-„xdokoli/v“ a „máloxdo“ a záporné zájmeno „nixdo“.
+\noindent Od zájmena xdo (gzdo) se pak předponou či příponou odvodí
+nová neurčitá zájmena: něxdo (něgzdo), kdexdo (kdegzdo),
+lecxdo (lecgzdo), xdosi (gzdosi),
+xdokoli/v (gzdokoli/v) a máloxdo (málogzdo)
+a záporné zájmeno nixdo (nigzdo).
 
 %„Slyšelu jsem o něxom, kdo by rádu studovalu na naší škole.“
 
@@ -155,7 +157,7 @@ shoda dovolí. Jediným nedostatkem stávajících zájmen kdo (jen tázací),
 nikdo apod. je, že ve větách mluvnickou shodou vynutí rod mužský životný.
 
 Tato zájmena existují jen v jednotném čísle,
-které zde ovšem nemá význam; zájmeny „kdo“ a „xdo“ se ptáme
+které zde ovšem nemá význam; zájmeny „kdo“ a „xdo“ (gzdo) se ptáme
 v jednotném čísle i na skupiny více osob, např. „Xdo včera vyhrálu
 v soutěži dvojic?“
 
