--- a/mluvnice/04-číslovky.tex
+++ b/mluvnice/04-číslovky.tex
@@ -1,5 +1,5 @@
 % Pátý rod
-% Copyright (c) 2021 Singularis <singularis@volny.cz>
+% Copyright (c) 2021, 2023 Singularis <singularis@volny.cz>
 %
 % Toto dílo je dílem svobodné kultury; můžete ho šířit a modifikovat pod
 % podmínkami licence Creative Commons Attribution-ShareAlike 4.0 International
@@ -9,6 +9,7 @@
 % https://creativecommons.org/licenses/by-sa/4.0/
 %
 
+\clearpage
 \section{Číslovky}
 
 {
