--- a/mluvnice/06-slovotvorba.tex
+++ b/mluvnice/06-slovotvorba.tex
@@ -1,5 +1,5 @@
 % Pátý rod
-% Copyright (c) 2021 Singularis <singularis@volny.cz>
+% Copyright (c) 2021-2023 Singularis <singularis@volny.cz>
 %
 % Toto dílo je dílem svobodné kultury; můžete ho šířit a modifikovat pod
 % podmínkami licence Creative Commons Attribution-ShareAlike 4.0 International
@@ -11,30 +11,39 @@
 
 \section{Slovotvorba z existujících názvů osob}
 
-Jde-li o zpodstatnělé přídavné jméno\ifgmelse{\mbox{} (např. „hajný“, „komoří“, „rozhodčí“, „vyučující“)}{},
-do pátého rodu ho převedete jednoduše tak, že ho budete skloňovat podle pravidel
-pátého rodu pro přídavná jména.
+Vycházíme-li ze zpodstatnělého přídavného jména\ifgmelse{\mbox{} (např. „hajný“, „komoří“, „rozhodčí“, „vyučující“)}{},
+do pátého rodu ho převedeme jednoduše tak, že ho budeme skloňovat podle pravidel
+pátého rodu pro přídavná jména (např. hajný/á~$\Rightarrow$~hajnau).
 
-Chcete-li vyjít z podstatného jména, postupujte následovně:
+Tvoříme-li název osoby v rodě pátém z podstatného jména v jiném rodě,
+obvyklý postup je následující:
 
 \begin{enumerate}
-\item Vezměte základní (nepřechýlený a pokud možno nezdrobnělý název osoby,
-z něhož chcete vycházet), vezměte první pád čísla jednotného.
-\item Podle \emph{tabulky slovotvorných přípon} určete slovotvornou příponu,
-pomocí které vznikl, a nahraďte ji odpovídající slovotvornou příponou rodu pátého.
-Přitom může být potřeba zohlednit tvrdost/měkkost souhlásek či celkovou výslovnost
-vzniklého slova a podle potřeby může dojít k měkčení souhlásky před příponou.
-Není vždy nutno se řídit skutečnou etymologií názvu,
-spíše je třeba upřednostnit srozumitelnost, praktičnost a snadnou
-výslovnost utvořených slov. \ifgmelse{Např. „žák“ sice není ve skutečnosti
-odvozeno příponou „-ák“ (od „ž“?), ale slovo „žáx“,
-které tak můžeme vytvořit, je praktičtější než „žákex“, a proto je vhodnější.
-Variabilita takové slovotvorby není na škodu, protože teprve praxe dokáže
-rozlišit, která slova se v jazyce uchytí a která ne.}{}
-\end{enumerate}
+\item Vezmeme základní (zásadně nepřechýlený a pokud možno nezdrobnělý) název osoby,
+první pád čísla jednotného.
+\item Podle \emph{tabulky slovotvorných přípon a zakončení} najdeme
+odpovídající zakončení a nahradíme ho příslušnou slovotvornou příponou rodu pátého.
+Odpovídá-li v tabulce víc zakončení, použijeme to nejdelší.
 
+Při nahrazení může být potřeba zohlednit tvrdost/měkkost souhlásek
+či celkovou výslovnost vzniklého slova a podle potřeby může dojít
+k měkčení souhlásky před příponou.
+
+Vzhledem k tomu, že pro laickou veřejnost nemusí být zřejmý přesný původ
+konkrétního názvu či slovotvorná přípona, jejímž připojením byl odvozen,
+jsou správně utvořené také názvy, které se neřídí příponou, kterou slovo
+ve skutečnosti vzniklo, ale vznikly pouhým nahrazením příslušné skupiny
+hlásek na konci slova. Např. „žák“ \ifgmelse{}{(muž)} není ve skutečnosti
+odvozeno příponou „-ák“ (od „ž“?), ale slovo „žáx“, které tak můžeme vytvořit,
+je praktičtější než systematické „žákex“, proto je zcela v pořádku,
+možná dokonce vhodnější.
+Variabilita takové slovotvorby v mezích srozumitelnosti a estetiky není na škodu,
+protože teprve praxe dokáže rozlišit, která slova se v jazyce uchytí a která ne.
+\end{enumerate}
+%
 \begin{table}
-%\clearpage%
+\newcommand*{\cizipripona}[1]{\mbox{}\ensuremath{\bullet}\hspace{0.5em}\mbox{}#1}
+\newcommand*{\jinezakonceni}[1]{\mbox{}\ensuremath{\diamond}\hspace{0.5em}\mbox{}#1}
 {
 \hyphenpenalty=10000
 \begin{longtabu}{|X[1,R]|X[1,R]|X[3,L]|X[3,L]|}
@@ -44,93 +53,93 @@ rozlišit, která slova se v jazyce uchytí a která ne.}{}
                 &-ex/-ix&lidojed\ifgmelse{}{-muž}, listonoš\ifgmelse{}{-muž}, Čech\ifgmelse{}{-muž}&lidojedex, listonošix, Češix\\\hline%
 \raggedright\footnotesize{}„“\hspace{-0.25em}~(po~samohl.)%
                 &-x&rada\ifgmelse{}{-muž} (Vacátko)&radax\\\hline%
--\textbf{a}     &-ax    &nestyda\ifgmelse{}{-muž}, starosta\ifgmelse{}{-muž}  &nestydax\\\hline%
--ena            &-ex    &švadlena           &švadlex\\\hline%   [ ] uvažovat i o tvaru „švadlenx“, ale aby nepůsobil příliš žensky (chceme co nejkratší tvary)
--ista           &-istax &komunista\ifgmelse{}{-muž}          &komunistax\\\hline%
--ka             &-kax   &ochmelka\ifgmelse{}{-muž}           &ochmelkax\\\hline%
-%
--e\textbf{c}    &-ex/-ix&běžec\ifgmelse{}{-muž}, stařec\ifgmelse{}{-muž}, Estonec\ifgmelse{}{-muž}, chlapec    &běžix, Estonex, chlapex\\\hline%
--inec           &-inex  &našinec\ifgmelse{}{-muž}            &našinex\\\hline%   „našix“ zní mizerně
--ovec           &-ovex  &klausovec\ifgmelse{}{-muž}          &klausovex\\\hline%
-%
--a\textbf{č}    &-ačix  &posluchač\ifgmelse{}{-muž}  &posluchačix\\\hline%
+-\textbf{a}     &-ax    &nestyda\ifgmelse{}{-muž}, starosta\ifgmelse{}{-muž}  &nestydax, starostax\\\hline%
+-ka             &-kax   &ochmelka\ifgmelse{}{-muž}, černovláska &ochmelkax, černovláskax\\\hline%
+-na             &-nax   &běhna&běhnax\small\ (drbna a klepna jsou vespolné)\\\hline% - nutný výzkum: drbna, běhna, klepna;
+-ena            &-ex    &švadlena           &švadlex\\\hline%   [ ] uvažovat i o tvaru „švadlenx“, ale aby nepůsobil příliš žensky (chceme co nejkratší tvary) % podle SSČ
+\cizipripona{-ita}&-itax  &jezuita\ifgmelse{}{-muž} &jezuitax\\\hline%
+\cizipripona{-ista}&-istax &lingvista\ifgmelse{}{-muž}          &lingvistax\\\hline%
+
+-e\textbf{c}\footnotesize{}~(ne po „n“) &-ex/-ix&běžec\ifgmelse{}{-muž}, stařec\ifgmelse{}{-muž}, Estonec\ifgmelse{}{-muž}    &běžix, Estonex\\\hline%
+-\textbf{č}              &-čix   &posluchač\ifgmelse{}{-muž}           &posluchačix\\\hline%
+%-a\textbf{č}    &-ačix  &posluchač\ifgmelse{}{-muž}  &posluchačix\\\hline%
 -áč             &-áčix  &boháč\ifgmelse{}{-muž}, břicháč\ifgmelse{}{-muž} &boháčix\\\hline%
--č              &-čix   &prodavač\ifgmelse{}{-muž}           &prodavačix\\\hline%
-%
+
 -c\textbf{e}    &-cix   &dárce\ifgmelse{}{-muž}              &dárcix\\\hline%
-%
+
 -o\textbf{ch}   &-ox    &černoch\ifgmelse{}{-muž}            &černox\\\hline%
-%
+
 -á\textbf{k}    &-áx    &divák\ifgmelse{}{-muž}, chytrák\ifgmelse{}{-muž}, Pražák\ifgmelse{}{-muž}, voják\ifgmelse{}{-muž}  &diváx\\\hline%
--ček            &-čix   &{\small(miláček),} dědeček & dědečix\\\hline%
--ik             &-ix    &chemik\ifgmelse{}{-muž}, politik\ifgmelse{}{-muž}, logik\ifgmelse{}{-muž}&chemix, politix, logix\\\hline%
--ík             &-ix    &stařík\ifgmelse{}{-muž}, uprchlík\ifgmelse{}{-muž}   &stařix\\\hline%
--lek            &-lex   &pisálek\ifgmelse{}{-muž}            &pisálex\\\hline%
--ník            &-nix   &podvodník\ifgmelse{}{-muž}, právník\ifgmelse{}{-muž} &právnix\\\hline%
+-ek             &-ex/-ix&mazánek\ifgmelse{}{-muž}, bezzemek\ifgmelse{}{-muž}& mazánex, bezzemix\\\hline%
 -oušek          &-oušix &fanoušek\ifgmelse{}{-muž}           &fanoušix\\\hline%
-%
+\cizipripona{-ik}&-ix    &chemik\ifgmelse{}{-muž}, politik\ifgmelse{}{-muž}, logik\ifgmelse{}{-muž}&chemix, politix, logix\\\hline%
+-ík             &-ix    &stařík\ifgmelse{}{-muž}, uprchlík\ifgmelse{}{-muž}   &stařix\\\hline%
+-čík            &-čík   &plavčík\ifgmelse{}{-muž} & plavčix\\\hline%
+-ník            &-nix   &podvodník\ifgmelse{}{-muž}, právník\ifgmelse{}{-muž} &právnix\\\hline%
+
 -\textbf{l}     &-lex   &kutil\ifgmelse{}{-muž}, generál\ifgmelse{}{-muž}     &kutilex\\\hline%
+\jinezakonceni{-uál}&-uax   &intelektuál\ifgmelse{}{-muž}        &intelektuax\\\hline% [ ] ? duál, intelektuál, vizuál - nejsou přímo z latiny? určitě cizí přípona, ale jaká?
 -tel            &-tex   &učitel\ifgmelse{}{-muž}             &učitex\\\hline%
--uál            &-uax   &intelektuál\ifgmelse{}{-muž}        &intelektuax\\\hline%
-%
+
 -a\textbf{n}    &-anex  &Američan\ifgmelse{}{-muž}, skokan\ifgmelse{}{-muž}   &Amerikanex/Američanex, skokanex\\\hline% nutno rozlišit Bosňan × Bosňák
 -án             &-áx    &dlouhán\ifgmelse{}{-muž}, indián\ifgmelse{}{-muž}    &indiáx\\\hline%    [ ] nesjednotit? sice není potřeba rozlišit, ale bude těžké rozlišovat mezi -an a -án...
--ián            &-iáx   &hrubián\ifgmelse{}{-muž}            &hrubiáx\\\hline%   (následuje -án)
--ín             &-ínex  &vojín\ifgmelse{}{-muž}              &vojínex\\\hline%   nutno rozlišit voj|ák x voj|ín!
--itán           &-itánex &kapitán\ifgmelse{}{-muž}           &kapitánex\\\hline% Neapolitán? [ ] Problém: dává jiný výsledek než vzor indián! Může být „kapitáx“? Prozkoumat vojenské hodnosti.
--oun            &-oux   &blboun\ifgmelse{}{-muž}, pěstoun\ifgmelse{}{-muž}    &pěstoux\\\hline%
--ýn             &-ex    &blondýn\ifgmelse{}{-muž}            &blondex\\\hline%
-%
--áto\textbf{r}  &-átox/-atox&programátor\ifgmelse{}{-muž}, reformátor\ifgmelse{}{-muž}&programátox, reformatox {\footnotesize\emph{(dle výslovnosti)}}\\\hline%
--er             &-ex/-ix&partner\ifgmelse{}{-muž}, teenager\ifgmelse{}{-muž}, boxer\ifgmelse{}{-muž}&partnex, teenagix(!), boxix\\\hline%
--ér             &-éřix  &režisér\ifgmelse{}{-muž}, reportér\ifgmelse{}{-muž}  &režiséřix\\\hline% kvůli estetice (nechceme „režiséx“)
--or             &-ox    &revizor\ifgmelse{}{-muž}, major\ifgmelse{}{-muž}     &revizox, majox\\\hline%
--our            &-oux   &hubeňour\ifgmelse{}{-muž}           &hubeňoux\\\hline%
--ýr             &-ex/-ýrex&mušketýr\ifgmelse{}{-muž}, pionýr\ifgmelse{}{-muž} &mušketex, pionýrex {\footnotesize\emph{(dle srozumitelnosti)}}\\\hline%
-%
+\jinezakonceni{-itán}&-itánex &kapitán\ifgmelse{}{-muž}, Neapolitán\ifgmelse{}{-muž}&kapitánex, Neapolitánex\\\hline% Neapolitán? [ ] Problém: dává jiný výsledek než vzor indián! Může být „kapitáx“? Prozkoumat vojenské hodnosti.
+-ín             &-ínex  &vojín\ifgmelse{}{-muž}, podivín\ifgmelse{}{-muž} &vojínex, podivínex\\\hline%   nutno rozlišit voj|ák x voj|ín!
+-oun            &-oux   &pěstoun\ifgmelse{}{-muž}    &pěstoux\\\hline%
+\cizipripona{-ýn}&-ex    &blondýn\ifgmelse{}{-muž}            &blondex\\\hline%
+
+\cizipripona{-e\textbf{r}}&-ex/-ix&partner\ifgmelse{}{-muž}, teenager\ifgmelse{}{-muž}, boxer\ifgmelse{}{-muž}&partnex, teenagix(!), boxix\\\hline%
+\cizipripona{-ér}&-éřix  &režisér\ifgmelse{}{-muž}, reportér\ifgmelse{}{-muž}  &režiséřix\\\hline% kvůli estetice (nechceme „režiséx“)
+\cizipripona{-or}&-ox    &revizor\ifgmelse{}{-muž}, programátor\ifgmelse{}{-muž}     &revizox, programátox\\\hline%
+\jinezakonceni{-our}&-oux   &hubeňour\ifgmelse{}{-muž}           &hubeňoux\\\hline%
+\jinezakonceni{-ýr}&-ex/-ýrex&mušketýr\ifgmelse{}{-muž}, pionýr\ifgmelse{}{-muž} &mušketex, pionýrex {\footnotesize\emph{(dle srozumitelnosti)}}\\\hline%
+
 -a\textbf{ř}    &-ařix  &chatař\ifgmelse{}{-muž}, písař\ifgmelse{}{-muž}      &chatařix\\\hline%
 -ář             &-ářix  &cukrář\ifgmelse{}{-muž}, návrhář\ifgmelse{}{-muž}    &cukrářix\\\hline%  nutno rozlišit „zednář“ × „zedník“
--éř             &-éřix  &kancléř\ifgmelse{}{-muž}            &kancléřix\\\hline% kvůli estetice (nechceme „kancléx“)
--íř             &-ířix  &kreslíř\ifgmelse{}{-muž}, uhlíř\ifgmelse{}{-muž}     &kreslířix\\\hline% kvůli většímu odlišení „rytířix“ × „rytex“ (~ rytec/čice)
--onář           &-onářix&milicionář\ifgmelse{}{-muž}         &milicionářix\\\hline%
-%
+\cizipripona{-ionář}&-ionářix&milicionář\ifgmelse{}{-muž}         &milicionářix\\\hline%
+\cizipripona{-éř}&-éřix  &kancléř\ifgmelse{}{-muž}            &kancléřix\\\hline% kvůli estetice (nechceme „kancléx“)
+-íř             &-ířix  &kreslíř\ifgmelse{}{-muž}, uhlíř\ifgmelse{}{-muž}     &kreslířix\\\hline% kvůli většímu odlišení „rytířix“ × „rytex“ (~ rytec/čice) % podle SSČM
+-ýř             &-ýřix  &šenkýř\ifgmelse{}{-muž}&šenkýřix\\\hline% podle SSČM
+
 -a\textbf{s}    &-asix  &kliďas\ifgmelse{}{-muž}             &kliďasix\\\hline%
--ous            &-oux   &divous\ifgmelse{}{-muž}             &divoux\\\hline%
-%
+\jinezakonceni{-ous}&-oux   &divous\ifgmelse{}{-muž}             &divoux\\\hline%
+
+
 -o\textbf{š}    &-ex    &podloš\ifgmelse{}{-muž}             &podlex\\\hline%
--ouš            &-oušix &teplouš\ifgmelse{}{-muž}            &teploušix\\\hline%
-%
--an\textbf{t}   &-anx   &demonstrant\ifgmelse{}{-muž}, pracant\ifgmelse{}{-muž}   &demonstranx\\\hline%
--át             &-áx    &kandidát\ifgmelse{}{-muž}           &kandidáx\\\hline%
--ent            &-enx   &student\ifgmelse{}{-muž}            &studenx\\\hline%
--out            &-oux   &žrout\ifgmelse{}{-muž}              &žroux\\\hline%     změna oproti verzi 0.2
--ut             &-ux    &astronaut\ifgmelse{}{-muž}, terapeut\ifgmelse{}{-muž}&astronaux\\\hline%
-%
--i\textbf{v}    &-ivex  &detektiv\ifgmelse{}{-muž}&detektivex\\\hline%
-%
-%-čí     &-čix   &rozhodčí           & % vynechat - jde o zpodstatnělé přídavné jméno! (stejně jako např. komoří)
-%-dlo    &-dlox  &strašidlo          &strašidlox\\\hline% % vynechat - tvoří názvy rodu středního!
+-ouš            &-oušix &starouš\ifgmelse{}{-muž}            &staroušix\\\hline%
+
+\cizipripona{-an\textbf{t}}&-anx   &demonstrant\ifgmelse{}{-muž}, pracant\ifgmelse{}{-muž}   &demonstranx\\\hline%
+\cizipripona{-át}&-áx    &kandidát\ifgmelse{}{-muž}           &kandidáx\\\hline%
+\cizipripona{-ent}&-enx   &student\ifgmelse{}{-muž}            &studenx\\\hline%
+\jinezakonceni{-naut}&-naux    &astronaut\ifgmelse{}{-muž}&astronaux\\\hline%
+\jinezakonceni{-eut}&-eux     &terapeut\ifgmelse{}{-muž}&terapeux\\\hline%
+\jinezakonceni{-out}&-oux   &žrout\ifgmelse{}{-muž}              &žroux\\\hline%     změna oproti verzi 0.2
+\jinezakonceni{-i\textbf{v}}&-ivex  &detektiv\ifgmelse{}{-muž}&detektivex\\\hline%
 \end{longtabu}}
+\begin{center}\bfseries Tabulka slovotvorných přípon a jiných zakončení ($\bullet$ = cizí přípona, $\diamond$ = jiné zakončení)\end{center}
+\end{table}
 % Pozor na souvislost „prodava|č“ a „posluch|ač“! Obě cesty musejí vést ke stejným tvarům. (Je mezi nimi vůbec rozdíl?)
 % Pozor: Švýcar má nulovou příponu (vzniklo od „Švýcary“)
-\begin{center}\bfseries Tabulka slovotvorných přípon\end{center}
-\end{table}
 
 Tvoření slov v rodě pátém od názvů výrazně pohlavně/genderově
 specifických \emph{(muž, žena, matka, otec, syn, dcera, ...)}
-je sice možné, ale problematické a pravděpodobně nepříliš funkční,
-mohou však fungovat od nich odvozená pojmenování (např. „zdravotní sestrax“).
+je sice možné, ale problematické a ve většině případů nepříliš funkční,
+výjimkou jsou v této verzi pátého rodu „(zdravotní) sestrax“, „vdovax“, „vnukex“,
+„švagrex“ a „tchýněx“.
+Při odvozování ostatních je nutno ověřit, zda v praxi fungují jako genderově
+neutrální.
 
 Takzvané \emph{vespolné názvy osob} jsou názvy všech mluvnických rodů,
 které jsou v praxi hojně a bez ostychu používány
 k nazývání osob všech možných pohlaví/genderů a nejsou s nimi svázány
 pohlavně/genderově specifické stereotypy. Jejich rod je pouze mluvnický
 a nemá pohlavní/genderový význam. Jsou to slova jako
-„člověk“, „rodič“, „osoba“, „miláček“, „mazlíček“, „filmová postava“,
-„oběť“, „duch“, „předek“, „osobnost“, „potomek“, „protějšek“,
-„(filmová) hvězda“, „host“, „sourozenec“, „idol“
-a také téměř všechny názvy osob rodu středního (dítě, dvojče, strašidlo).
-Vespolné názvy osob stávajících mluvnických rodů mají být používány tak,
+„člověk“, „rodič“, „osoba“, „miláček“, „mazlíček“, „(filmová) postava“,
+„oběť“, „duch“, „předek“, „vzor“, „osobnost“, „potomek“, „drbna“, „protějšek“,
+„(filmová) hvězda“, „host“, „celebrita“, „sourozenec“, „klepna“, „chudák“,
+„idol“, „chudinka“
+a také téměř všechny názvy osob rodu středního (dítě, dvojče, strašidlo,
+zlobidlo). Vespolné názvy osob stávajících mluvnických rodů mají být používány tak,
 jak jsou, a tvořit od nich názvy v rodě pátém je nevhodné.
 
 Zcela nesmyslné je tvořit názvy v rodě pátém od metaforických pojmenování
@@ -195,20 +204,31 @@ jmen.
 Názvy osob v rodě pátém lze utvářet i přímo od podstatných jmen
 (např. „chatax“), přídavných jmen (např. „chytrex“, „krásix“)
 a sloves (např. „kreslix“). Tento způsob utváření
-však dosud nebyl důkladně popsán a prozkoumán a může způsobovat problémy,
-protože od slov v rodě pátém nejsou popsány další slovotvorné cesty.
+dosud nebyl důkladně popsán a prozkoumán a může způsobovat problémy,
+protože od slov v rodě pátém nejsou popsány další slovotvorné cesty,
+přesto mohou vznikat nové a samostatné názvy v rodě pátém,
+které nebudou mít analogické protějšky v jiných rodech.
 
-\section{Slovotvorba zvláštní}
+\section{Výjimky ve slovotvorbě}
 
-Některé přechýlené názvy osob jsou v češtině frekventované,
-aniž by byla běžně známá, srozumitelná a funkční jejich základní podoba
-nebo protějšek rodu mužského životného. Některé další byly již utvořeny
-zdánlivě přechýlené, nejsou považovány za vespolné a příznakovost ženského rodu
-upírá tato označení osobám, které nejsou ženy.
+Většina názvů osob v češtině vzniká tak, že nejprve vznikne základní
+označení v rodě mužském životném, které je nejfrekventovanější a je primárním
+nositelem významu, a od něho je následně připojením přechylovací přípony
+odvozen název v rodě ženském, který se odkazuje na význam základního označení
+a jsou pod něj podle potřeby „odsouváni“ lidé ženského genderu.
+Výše popsané mechanismy pro utváření názvů v rodě pátém jsou optimalizovány
+pro tento případ.
 
-S těmito názvy je vhodné zacházet individuálně a odtržení
-pohlavně/genderově zabarvených zakončení provést nesystematicky.
-Některá takto vzniklá pohlavně/genderově neutrální slova jsou:
+Některé názvy osob ale fungují jinak. Mohou to být názvy, kde je název
+v rodě ženském názvem základním (vdova, kmotra), nejfrekventovanějším
+nebo je primárním nositelem významu a společenského statusu
+(prostitutka), případně je jediným možným názvem, který nelze funkčně přechýlit
+(rodička, sestra).
+
+S těmito jinak fungujícími názvy je vhodné zacházet individuálně a odtržení
+pohlavně/genderově zabarvených zakončení pro převod do pátého rodu
+provést nesystematicky. Některá takto vzniklá pohlavně/genderově neutrální slova
+(výjimky) jsou:
 
 \newenvironment{slovnik}{%
     \newcommand*{\slovo}[3]{\noindent\textbf{##2} ({\footnotesize z~„##1“}) {---~\itshape{}##3}\par}%
@@ -219,9 +239,12 @@ Některá takto vzniklá pohlavně/genderově neutrální slova jsou:
 }
 
 \begin{slovnik}%
+\slovo{kmotr/a}{kmotrax {\mdseries i} kmotrex}{(několik významů)}%
 \slovo{mažoretka}{mažorex}{fyzická osoba v barevné uniformě provádějící sportovní cvičení za pochodu se slavnostním průvodem či kapelou, obvykle ve větší skupině}%
 \slovo{modelka}{modelex}{xdo pózuje pořizovatexím uměleckých děl nebo předvádí oblečení ve společnosti}%
 \slovo{prostitutka}{prostitux}{fyzická osoba, která provozuje prostituci}%
 \slovo{rodička}{rodičkax}{člověk rodící dítě ze své dělohy nebo ho čerstvě porodivší}%
+\slovo{(zdravotní) sestra}{sestrax}{zdravotnickau pracovnix}%
 \slovo{uklízečka}{uklízečix}{fyzická osoba provádějící úklid za mzdu či plat}%
+\slovo{vdova}{vdovax}{osoba, jejíž životní partnex zemřelu}%
 \end{slovnik}
