--- a/mluvnice/07-závěr.tex
+++ b/mluvnice/07-závěr.tex
@@ -1,5 +1,5 @@
 % Pátý rod
-% Copyright (c) 2021 Singularis <singularis@volny.cz>
+% Copyright (c) 2021-2023 Singularis <singularis@volny.cz>
 %
 % Toto dílo je dílem svobodné kultury; můžete ho šířit a modifikovat pod
 % podmínkami licence Creative Commons Attribution-ShareAlike 4.0 International
@@ -30,13 +30,22 @@ je kombinovat v jedné větě.
 
 \section{Shoda přísudku s vícenásobným podmětem}
 
-Při shodě přísudku s vícenásobným podmětem platí u rodu pátého, že jeho tvary
-mají váhu mírně nižší než jim odpovídající náhradní rod, proto:
+Při shodě přísudku s vícenásobným podmětem se postupuje tak,
+že slovo rodu pátého:
+\begin{itemize}
+\item je-li v čísle jednotném, má vyšší váhu než
+slovo rodu mužského neživotného, ale nižší než slovo rodu mužského
+životného;
+\item je-li v čísle množném, má vyšší váhu než
+slovo rodu středního, ale nižší než slovo rodu ženského.
+\end{itemize}
+
+\noindent Proto:
 
 \begin{itemize}
 \item „Žebrák-muž, studenx a primátorka nesli vědro. Žebráci-muži, studenx a primátorka nesli vědro.“ (Převážil rod mužský životný.)
-\item „Studenx a primátorka nesle vědro. Studenx a starostky nesle vědro.“ (Převážil rod pátý, protože v jednotném čísle má skoro váhu rodu mužského životného.)
-\item „Studenxe a primátorka nesly vědro.“ (Převážil rod ženský, protože v množném čísle má rod pátý o trochu nižší váhu.)
+\item „Studenx a primátorka nesle vědro. Studenx a starostky nesle vědro.“ (Převážil rod pátý.)
+\item „Studenxe a primátorka nesly vědro.“ (Převážil rod ženský, protože název v pátém rodě je v množném čísle.)
 \item „Studenx a ježí dvojče nesle vědro. Studenxe a jejich dvojčata nesle vědra.“ (V obou případech převážil rod pátý.)
 \item „Dvě aktivistaxe, jedno studenx a primátorka nesle vědro.“ (Převážil rod pátý, díky části podmětu, v níž má jednotné číslo.)
 \end{itemize}
@@ -60,11 +69,8 @@ Jeho použití je naopak v pořádku u nepočeštěných jmen anglických
 (např. „Virginia Woolf“, „George Bush“), protože ta rod odpovídající
 tomu v češtině nemají. Rovněž lze použití pátého rodu považovat za vhodné
 u jmen vícerodých či rodem kolísajících (např. Alex či Singularis),
-je-li vhodné je neskloňovat nebo končí-li -x, takže je možné je skloňovat
+je-li vhodné je neskloňovat nebo končí-li -x či -ks, takže je možné je skloňovat
 dle vzoru studenx.
-A spíše přijatelné se mi jeví také použití pátého rodu s ostatními
-jednoslovnými jmény zakončenými -x (např. Rex), budou-li přitom
-skloňována dle vzoru studenx.
 
 K rodu pátému lze také přejít tam, kde již mluvnická shoda není nutná
 a je možná „shoda podle smyslu“, tedy zpravidla v následujícím souvětí, např.:
@@ -120,7 +126,7 @@ inspirací z české mluvnice; z dalších zdrojů a původcixí musím zmín
 
 \section{Licence}
 
-\noindent (c) 2021 Singularis
+\noindent (c) 2021-2023 Singularis
 
 Tento dokument je dílo svobodné kultury. Můžete ho šířit a modifikovat pod
 podmínkami licence Creative Commons Attribution-ShareAlike 4.0 International
