ještě oprava zalomení

--- a/mluvnice/00-úvod.tex
+++ b/mluvnice/00-úvod.tex
@@ -60,7 +60,7 @@ Verze: 1.2 (červen 2023)
 \section{Úvod (deklarace)}
 
 Pátý rod je umělecký projekt genderově neutrálního rozšíření českého jazyka.
-Jeho cílem je přinést funkčnější a jednoznačnější alternativu generického
+Jeho cílem je přinést funkčnější a jedno\-značnější alternativu generického
 maskulina při maximálním zachování krásy, bohatství a funkčnosti jazyka
 ve všech jeho stylech a formách a uměle mu doplnit prostředky
 pro vyjadřování v hovoru i textu, které bude esteticky
